# opcua-cmake

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  example_server.sh  include  lint.sh  start_client.sh  start_server.sh  user_address_space.xml
client/: CMakeLists.txt  include  opc_tcp.conf  src
client/config/: opc_tcp.config
core/: CMakeLists.txt  include  src
mappings/: CMakeLists.txt  include
protocol/: CMakeLists.txt  src
python/: CMakeLists.txt  src
server/: CMakeLists.txt  address_space  binary_protocol  builtin_server  endpoint_services  example  exe  server  services_registry  src  standard_address_space.xml  standard_namespace  tcp_server  xml_address_space_loader
server/config/: main.config  standard_address_space.xml  user_address_space.xml
src/: Client.cmake  Core.cmake  Protocol.cmake  Python.cmake  Server.cmake  core  examples  protocol
win/: generate_prject.bat
