cmake_minimum_required (VERSION 2.6)
project (FreeOpcUa)

option(CLANG "Build using Clang++" ON)

option(BUILD_PYTHON "Build Python bindings" ON)
option(BUILD_MAPPINGS "Build Mappings" ON)
option(BUILD_CORE "Build Core" ON)
option(BUILD_CLIENT "Build Client" ON)
option(BUILD_SERVER "Build Server" ON)
option(BUILD_TESTS "Build Tests Target" ON)


set(MAPPINGSDIR ${CMAKE_SOURCE_DIR}/reps/opcua-mappings)
set(COREDIR ${CMAKE_SOURCE_DIR}/reps/opcua-core)
set(CLIENTDIR ${CMAKE_SOURCE_DIR}/reps/opcua-client)
set(SERVERDIR ${CMAKE_SOURCE_DIR}/reps/opcua-server)
set(PYTHONDIR ${CMAKE_SOURCE_DIR}/reps/opcua-python)


if(NOT WIN32)
    set(CMAKE_CXX_FLAGS "-std=c++0x -ggdb -Wall ${CMAKE_CXX_FLAGS_DEBUG} " ) 
    if(CLANG)
        set(CMAKE_CXX_COMPILER  "clang++")
        set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
    endif()
endif(NOT WIN32)


find_package( Boost  COMPONENTS system program_options filesystem thread REQUIRED )
include_directories( ${Boost_INCLUDE_DIR} )
message(STATUS "Boost INCLUDE DIR IS: " ${Boost_INCLUDE_DIR})

if( WIN32 )
	set(LIBXML2_INCLUDE_DIR c:/lixml2/include/)
	set(LIBXML2_LIBRARIES c:/lixml2/lib)
else ( WIN32 )
	find_package(LibXml2 REQUIRED) 
endif( WIN32 )
include_directories( ${LIBXML2_INCLUDE_DIR} )

if(BUILD_TESTS)
    find_package(GTest)
    if(GTEST_FOUND)
        MESSAGE(STATUS "GTest found, building tests")
        enable_testing()
        include_directories(${GTEST_INCLUDE_DIRS})
    else()
        MESSAGE(STATUS "GTest NOT found, Not building tests")
        set(BUILD_TESTS OFF)
    endif()
endif()


if(BUILD_MAPPINGS)
    message(STATUS "Building Mappings")
    add_subdirectory (mappings) 
    if(BUILD_TESTS)
        add_test("OPC-UAMappings" ${PROJECT_BINARY_DIR}/mappings/opcuabinary_tests )
        set(TEST_MAPPINGS_DEPEND opcuabinary_tests)
    endif(BUILD_TESTS)
endif(BUILD_MAPPINGS)
if(BUILD_CORE)
    message(STATUS "Building Core")
    add_subdirectory (core) 
    if(BUILD_TESTS)
        add_test("OPC-UACore" ${PROJECT_BINARY_DIR}/core/opcuacore_tests )
        set(TEST_CORE_DEPEND opcuacore_tests)
    endif(BUILD_TESTS)
endif(BUILD_CORE)
if(BUILD_CLIENT)
    message(STATUS "Building Client")
    add_subdirectory (client) 
    if(BUILD_TESTS)
    endif(BUILD_TESTS)
endif(BUILD_CLIENT)
if(BUILD_SERVER)
    message(STATUS "Building Server")
    add_subdirectory (server) 
    if(BUILD_TESTS)
    endif(BUILD_TESTS)
endif(BUILD_SERVER)
if(BUILD_PYTHON)
    message(STATUS "Building Python")
    add_subdirectory (python) 
    if(BUILD_TESTS)
        add_test("PythonTests" python3 ${PYTHONDIR}/tests/test_highlevel.py) 
        #find_package(PythonInterp REQUIRED ) #cmake only find python2 ?!?!?
        #add_test("PythonTests" ${PYTHON_EXECUTABLE} ${PYTHONDIR}/tests/test_highlevel.py) 
    endif(BUILD_TESTS)
endif(BUILD_PYTHON)

if(BUILD_TESTS)
    add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure DEPENDS ${TEST_MAPPINGS_DEPEND} ${OPCUA_CORE_DEPEND})
endif()

